[package]
name = "mr-prober"
version = "0.1.0-dev"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
license = "BlueOak-1.0.0"
homepage = "https://github.com/tyranron/mr-prober"
repository = "https://github.com/tyranron/mr-prober"
readme = "README.md"

[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
